[gd_scene load_steps=15 format=3 uid="uid://bjlg77alywrog"]

[ext_resource type="FontFile" uid="uid://c4x42sd2xeuos" path="res://Hunger Games.ttf" id="1_hihjr"]
[ext_resource type="Script" path="res://ui/main_menu.gd" id="1_qt4nq"]
[ext_resource type="Texture2D" uid="uid://ctqgg7bqmxmvp" path="res://textures/backgrounds/main menu.png" id="2_k2bua"]
[ext_resource type="PackedScene" uid="uid://drhmkx6eouvr8" path="res://ui/color select button.tscn" id="3_4cktk"]
[ext_resource type="PackedScene" uid="uid://evtyiac40eda" path="res://ui/level_button.tscn" id="3_h8rhm"]
[ext_resource type="Script" path="res://ui/levels.gd" id="5_oo4fy"]
[ext_resource type="Texture2D" uid="uid://dordmx73xhhg6" path="res://textures/other/laser scope.png" id="7_5qbh6"]
[ext_resource type="AudioStream" uid="uid://b8rrmpb8sll77" path="res://sounds/effects/hover.mp3" id="7_jb2ba"]
[ext_resource type="AudioStream" uid="uid://d3vl22rp4syu" path="res://sounds/effects/click.mp3" id="8_yepfu"]

[sub_resource type="Animation" id="Animation_11dsk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(800, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 480)]
}

[sub_resource type="Animation" id="Animation_trsru"]
resource_name = "change"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(800, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_pn8fb"]
resource_name = "save anim"
length = 1.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 1.5, 1.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 480), Vector2(0, 456), Vector2(0, 456), Vector2(0, 480)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q2nv6"]
_data = {
"RESET": SubResource("Animation_11dsk"),
"change": SubResource("Animation_trsru"),
"save anim": SubResource("Animation_pn8fb")
}

[sub_resource type="LabelSettings" id="LabelSettings_ltwk5"]
font = ExtResource("1_hihjr")
font_color = Color(1, 1, 0, 1)

[node name="main menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qt4nq")

[node name="MainMenu" type="Sprite2D" parent="."]
position = Vector2(400, 240)
texture = ExtResource("2_k2bua")

[node name="Panel" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 800.0
offset_right = 1600.0
offset_bottom = 480.0

[node name="colors" type="Control" parent="Panel"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="debug level" type="Button" parent="Panel/colors"]
visible = false
layout_mode = 2
offset_right = 200.0
offset_bottom = 100.0
theme_override_fonts/font = ExtResource("1_hihjr")
theme_override_font_sizes/font_size = 22
disabled = true
text = "DEBUG LEVEL"

[node name="purple" parent="Panel/colors" instance=ExtResource("3_4cktk")]
layout_mode = 2
offset_left = 72.0
offset_top = 432.0
offset_right = 120.0
offset_bottom = 472.0
color = Color(0.45098, 0.00392157, 0.992157, 1)

[node name="darkblue" parent="Panel/colors" instance=ExtResource("3_4cktk")]
layout_mode = 2
offset_left = 136.0
offset_top = 432.0
offset_right = 184.0
offset_bottom = 472.0
color = Color(0, 0.286275, 0.796078, 1)

[node name="lightblue" parent="Panel/colors" instance=ExtResource("3_4cktk")]
layout_mode = 2
offset_left = 200.0
offset_top = 432.0
offset_right = 248.0
offset_bottom = 472.0
color = Color(0.105882, 0.635294, 1, 1)

[node name="cyan" parent="Panel/colors" instance=ExtResource("3_4cktk")]
layout_mode = 2
offset_left = 264.0
offset_top = 432.0
offset_right = 312.0
offset_bottom = 472.0
color = Color(0, 0.733333, 0.65098, 1)

[node name="green" parent="Panel/colors" instance=ExtResource("3_4cktk")]
layout_mode = 2
offset_left = 328.0
offset_top = 432.0
offset_right = 376.0
offset_bottom = 472.0
color = Color(0, 0.584314, 0.243137, 1)

[node name="lime" parent="Panel/colors" instance=ExtResource("3_4cktk")]
layout_mode = 2
offset_left = 392.0
offset_top = 432.0
offset_right = 440.0
offset_bottom = 472.0
color = Color(0.501961, 0.768627, 0, 1)

[node name="yellow" parent="Panel/colors" instance=ExtResource("3_4cktk")]
layout_mode = 2
offset_left = 456.0
offset_top = 432.0
offset_right = 504.0
offset_bottom = 472.0
color = Color(0.843137, 0.796078, 0, 1)

[node name="gold" parent="Panel/colors" instance=ExtResource("3_4cktk")]
layout_mode = 2
offset_left = 520.0
offset_top = 432.0
offset_right = 568.0
offset_bottom = 472.0
color = Color(0.572549, 0.454902, 0, 1)

[node name="orange" parent="Panel/colors" instance=ExtResource("3_4cktk")]
layout_mode = 2
offset_left = 584.0
offset_top = 432.0
offset_right = 632.0
offset_bottom = 472.0
color = Color(0.898039, 0.427451, 0, 1)

[node name="red" parent="Panel/colors" instance=ExtResource("3_4cktk")]
layout_mode = 2
offset_left = 648.0
offset_top = 432.0
offset_right = 696.0
offset_bottom = 472.0
color = Color(0.882353, 0, 0.0941176, 1)

[node name="darkred" parent="Panel/colors" instance=ExtResource("3_4cktk")]
layout_mode = 2
offset_left = 712.0
offset_top = 432.0
offset_right = 760.0
offset_bottom = 472.0
color = Color(0.537255, 0, 0.0392157, 1)

[node name="levels" type="Control" parent="Panel"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("5_oo4fy")

[node name="Button" parent="Panel/levels" instance=ExtResource("3_h8rhm")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 64.0
offset_top = 88.0
offset_right = 184.0
offset_bottom = 152.0
grow_horizontal = 1
grow_vertical = 1

[node name="Button2" parent="Panel/levels" instance=ExtResource("3_h8rhm")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 200.0
offset_top = 88.0
offset_right = 320.0
offset_bottom = 152.0
grow_horizontal = 1
grow_vertical = 1

[node name="Button3" parent="Panel/levels" instance=ExtResource("3_h8rhm")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 340.0
offset_top = 88.0
offset_right = 460.0
offset_bottom = 152.0
grow_horizontal = 1
grow_vertical = 1

[node name="Button4" parent="Panel/levels" instance=ExtResource("3_h8rhm")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 480.0
offset_top = 88.0
offset_right = 600.0
offset_bottom = 152.0
grow_horizontal = 1
grow_vertical = 1

[node name="Button5" parent="Panel/levels" instance=ExtResource("3_h8rhm")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 616.0
offset_top = 88.0
offset_right = 736.0
offset_bottom = 152.0
grow_horizontal = 1
grow_vertical = 1

[node name="Button6" parent="Panel/levels" instance=ExtResource("3_h8rhm")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 64.0
offset_top = 168.0
offset_right = 184.0
offset_bottom = 232.0
grow_horizontal = 1
grow_vertical = 1

[node name="Button7" parent="Panel/levels" instance=ExtResource("3_h8rhm")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 200.0
offset_top = 168.0
offset_right = 320.0
offset_bottom = 232.0
grow_horizontal = 1
grow_vertical = 1

[node name="Button8" parent="Panel/levels" instance=ExtResource("3_h8rhm")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 340.0
offset_top = 168.0
offset_right = 460.0
offset_bottom = 232.0
grow_horizontal = 1
grow_vertical = 1

[node name="Button9" parent="Panel/levels" instance=ExtResource("3_h8rhm")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 480.0
offset_top = 168.0
offset_right = 600.0
offset_bottom = 232.0
grow_horizontal = 1
grow_vertical = 1

[node name="Button10" parent="Panel/levels" instance=ExtResource("3_h8rhm")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 616.0
offset_top = 168.0
offset_right = 736.0
offset_bottom = 232.0
grow_horizontal = 1
grow_vertical = 1

[node name="Button11" parent="Panel/levels" instance=ExtResource("3_h8rhm")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 64.0
offset_top = 248.0
offset_right = 184.0
offset_bottom = 312.0
grow_horizontal = 1
grow_vertical = 1

[node name="Button12" parent="Panel/levels" instance=ExtResource("3_h8rhm")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 200.0
offset_top = 248.0
offset_right = 320.0
offset_bottom = 312.0
grow_horizontal = 1
grow_vertical = 1

[node name="Button13" parent="Panel/levels" instance=ExtResource("3_h8rhm")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 340.0
offset_top = 248.0
offset_right = 460.0
offset_bottom = 312.0
grow_horizontal = 1
grow_vertical = 1

[node name="Button14" parent="Panel/levels" instance=ExtResource("3_h8rhm")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 480.0
offset_top = 248.0
offset_right = 600.0
offset_bottom = 312.0
grow_horizontal = 1
grow_vertical = 1

[node name="Button15" parent="Panel/levels" instance=ExtResource("3_h8rhm")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 616.0
offset_top = 248.0
offset_right = 736.0
offset_bottom = 312.0
grow_horizontal = 1
grow_vertical = 1

[node name="Button16" parent="Panel/levels" instance=ExtResource("3_h8rhm")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 64.0
offset_top = 328.0
offset_right = 184.0
offset_bottom = 392.0
grow_horizontal = 1
grow_vertical = 1

[node name="Button17" parent="Panel/levels" instance=ExtResource("3_h8rhm")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 200.0
offset_top = 328.0
offset_right = 320.0
offset_bottom = 392.0
grow_horizontal = 1
grow_vertical = 1

[node name="Button18" parent="Panel/levels" instance=ExtResource("3_h8rhm")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 340.0
offset_top = 328.0
offset_right = 460.0
offset_bottom = 392.0
grow_horizontal = 1
grow_vertical = 1

[node name="Button19" parent="Panel/levels" instance=ExtResource("3_h8rhm")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 480.0
offset_top = 328.0
offset_right = 600.0
offset_bottom = 392.0
grow_horizontal = 1
grow_vertical = 1

[node name="Button20" parent="Panel/levels" instance=ExtResource("3_h8rhm")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 616.0
offset_top = 328.0
offset_right = 736.0
offset_bottom = 392.0
grow_horizontal = 1
grow_vertical = 1

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = -776.0
offset_top = 24.0
offset_right = -396.0
offset_bottom = 78.0
theme_override_fonts/font = ExtResource("1_hihjr")
theme_override_font_sizes/font_size = 50
text = "SPACE WARS"

[node name="Label2" type="Label" parent="Panel"]
layout_mode = 0
offset_left = -776.0
offset_top = 72.0
offset_right = -396.0
offset_bottom = 126.0
theme_override_fonts/font = ExtResource("1_hihjr")
theme_override_font_sizes/font_size = 15
text = "remastered"

[node name="start button" type="Button" parent="Panel"]
layout_mode = 0
offset_left = -736.0
offset_top = 128.0
offset_right = -480.0
offset_bottom = 192.0
theme_override_fonts/font = ExtResource("1_hihjr")
theme_override_font_sizes/font_size = 32
text = "Start"

[node name="save button" type="Button" parent="Panel"]
layout_mode = 0
offset_left = -736.0
offset_top = 208.0
offset_right = -480.0
offset_bottom = 272.0
theme_override_fonts/font = ExtResource("1_hihjr")
theme_override_font_sizes/font_size = 32
text = "save game"

[node name="exit button" type="Button" parent="Panel"]
layout_mode = 0
offset_left = -736.0
offset_top = 384.0
offset_right = -480.0
offset_bottom = 448.0
theme_override_fonts/font = ExtResource("1_hihjr")
theme_override_font_sizes/font_size = 32
text = "exit"

[node name="return button" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 32.0
offset_top = 8.0
offset_right = 176.0
offset_bottom = 64.0
theme_override_fonts/font = ExtResource("1_hihjr")
theme_override_font_sizes/font_size = 32
text = "return"

[node name="toggle color button" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 8.0
offset_top = 424.0
offset_right = 56.0
offset_bottom = 472.0

[node name="player color" type="ColorRect" parent="Panel"]
layout_mode = 2
offset_left = 8.0
offset_top = 424.0
offset_right = 56.0
offset_bottom = 472.0
mouse_filter = 2

[node name="difficulty button" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 664.0
offset_top = 440.0
offset_right = 792.0
offset_bottom = 472.0
theme_override_fonts/font = ExtResource("1_hihjr")
theme_override_font_sizes/font_size = 20
text = "MEDIUM"

[node name="scope button" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 624.0
offset_top = 440.0
offset_right = 656.0
offset_bottom = 472.0

[node name="LaserScope" type="Sprite2D" parent="Panel/scope button"]
position = Vector2(16, 16)
scale = Vector2(1.8, 1.8)
texture = ExtResource("7_5qbh6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_q2nv6")
}

[node name="hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_jb2ba")
volume_db = -5.0
pitch_scale = 1.5

[node name="click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_yepfu")
volume_db = -5.0
pitch_scale = 1.2

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_top = 480.0
offset_right = 192.0
offset_bottom = 506.0
text = "Game saved ..."
label_settings = SubResource("LabelSettings_ltwk5")

[connection signal="pressed" from="Panel/colors/debug level" to="." method="_on_button_pressed"]
[connection signal="changeColor" from="Panel/colors/purple" to="." method="_on_change_color"]
[connection signal="mouse_entered" from="Panel/colors/purple" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Panel/colors/purple" to="." method="_button_click_sound"]
[connection signal="changeColor" from="Panel/colors/darkblue" to="." method="_on_change_color"]
[connection signal="mouse_entered" from="Panel/colors/darkblue" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Panel/colors/darkblue" to="." method="_button_click_sound"]
[connection signal="changeColor" from="Panel/colors/lightblue" to="." method="_on_change_color"]
[connection signal="mouse_entered" from="Panel/colors/lightblue" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Panel/colors/lightblue" to="." method="_button_click_sound"]
[connection signal="changeColor" from="Panel/colors/cyan" to="." method="_on_change_color"]
[connection signal="mouse_entered" from="Panel/colors/cyan" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Panel/colors/cyan" to="." method="_button_click_sound"]
[connection signal="changeColor" from="Panel/colors/green" to="." method="_on_change_color"]
[connection signal="mouse_entered" from="Panel/colors/green" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Panel/colors/green" to="." method="_button_click_sound"]
[connection signal="changeColor" from="Panel/colors/lime" to="." method="_on_change_color"]
[connection signal="mouse_entered" from="Panel/colors/lime" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Panel/colors/lime" to="." method="_button_click_sound"]
[connection signal="changeColor" from="Panel/colors/yellow" to="." method="_on_change_color"]
[connection signal="mouse_entered" from="Panel/colors/yellow" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Panel/colors/yellow" to="." method="_button_click_sound"]
[connection signal="changeColor" from="Panel/colors/gold" to="." method="_on_change_color"]
[connection signal="mouse_entered" from="Panel/colors/gold" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Panel/colors/gold" to="." method="_button_click_sound"]
[connection signal="changeColor" from="Panel/colors/orange" to="." method="_on_change_color"]
[connection signal="mouse_entered" from="Panel/colors/orange" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Panel/colors/orange" to="." method="_button_click_sound"]
[connection signal="changeColor" from="Panel/colors/red" to="." method="_on_change_color"]
[connection signal="mouse_entered" from="Panel/colors/red" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Panel/colors/red" to="." method="_button_click_sound"]
[connection signal="changeColor" from="Panel/colors/darkred" to="." method="_on_change_color"]
[connection signal="mouse_entered" from="Panel/colors/darkred" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Panel/colors/darkred" to="." method="_button_click_sound"]
[connection signal="mouse_entered" from="Panel/start button" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Panel/start button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Panel/start button" to="." method="_button_click_sound"]
[connection signal="mouse_entered" from="Panel/save button" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Panel/save button" to="." method="_button_click_sound"]
[connection signal="pressed" from="Panel/save button" to="." method="_on_save_button_pressed"]
[connection signal="mouse_entered" from="Panel/exit button" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Panel/exit button" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="Panel/exit button" to="." method="_button_click_sound"]
[connection signal="mouse_entered" from="Panel/return button" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Panel/return button" to="." method="_button_click_sound"]
[connection signal="pressed" from="Panel/return button" to="." method="_on_return_button_pressed"]
[connection signal="mouse_entered" from="Panel/toggle color button" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Panel/toggle color button" to="." method="_button_click_sound"]
[connection signal="pressed" from="Panel/toggle color button" to="." method="_on_toggle_color_button_pressed"]
[connection signal="mouse_entered" from="Panel/difficulty button" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Panel/difficulty button" to="." method="_button_click_sound"]
[connection signal="pressed" from="Panel/difficulty button" to="." method="_on_difficulty_button_pressed"]
[connection signal="mouse_entered" from="Panel/scope button" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Panel/scope button" to="." method="_button_click_sound"]
[connection signal="pressed" from="Panel/scope button" to="." method="_on_scope_button_pressed"]
